--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             </a>
             </div>
             <div class="menu2">
-                <a href="chic.html">
+                <a href="pages/menu_chic.html">
                 <h2>Le chic à la française</h2>
                 <h3>Menu</h3>
             </a>
             </div>
             <div class="menu3">
-                <a href="delice.html">
+                <a href="pages/menu_delice.html">
                  <h2>Le délice des papilles</h2>
                  <h3>Menu</h3>
                 </a>
             </div>
             <div class="menu4">
-                <a href="palette.html">
+                <a href="pages/menu_palette.html">
                 <h2>La palette du goût</h2> 
                 <h3>Menu</h3>
             </a>
@@ -55,7 +55,7 @@
             </p>
         </aside>
         <footer>
-            <a href="mentions_legales.html">
+            <a href="pages/mentions_legales.html">
             <p>Mention légales</p>
             </a>
             <p>Contactez-nous</p>
