rajout du menu palette et rajout de mailto sur toutes les pages

--- a/pages/mentions_legales.html
+++ b/pages/mentions_legales.html
@@ -65,7 +65,7 @@
             <a href="mentions_legales.html">
             <p>Mention légales</p>
             </a>
-            <p>Contactez-nous</p>
+            <a href="mailto:contact@ohmyfood.net"><p>Contactez-nous</p></a>
         </footer>
     </body>    
 
