--- a/pages/menu_note.html
+++ b/pages/menu_note.html
@@ -64,7 +64,7 @@
             <a href="mentions_legales.html">
             <p>Mention légales</p>
             </a>
-            <p>Contactez-nous</p>
+            <a href="mailto:contact@ohmyfood.net"><p>Contactez-nous</p></a>
         </footer>
 
     </body>
