validation entière des HTML et CSS + aside (width 200px => 250px)

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
             <div class="menu1"> 
                 <a href="pages/menu_note.html">
                 <h2> 
-                    <i class="fas fa-music" aria-hidden="true"></i> </br>
-                    La note enchantée
+                    <i class="fas fa-music" aria-hidden="true"></i><br>
+                     La note enchantée
                 </h2>
                 <h3>Menu</h3>
             </a>
@@ -58,9 +58,7 @@
             <a href="pages/mentions_legales.html">
             <p>Mention légales</p>
             </a>
-            <p>Contactez-nous</p>
+            <a href="mailto:contact@ohmyfood.net"><p>Contactez-nous</p></a>
         </footer>
     </body>    
-
-    </body>
 </html>
