--- a/pages/menu_note.html
+++ b/pages/menu_note.html
@@ -17,7 +17,7 @@
 
         <main>
             <h2>
-                <i class="fas fa-music" aria-hidden="true"></i> </br>
+                <i class="fas fa-music" aria-hidden="true"></i> <br>
                    La note enchantée
             </h2>
 
