--- a/pages/mentions_legales.html
+++ b/pages/mentions_legales.html
@@ -17,7 +17,7 @@
 
         <main>
             <h2>Mentions légales</h2>
-            <p>En vigueur au 01/09/2020. </br>
+            <p>En vigueur au 01/09/2020. <br>
                 Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 
                 pour la Confiance dans l’économie numérique, dite L.C.E.N, il est porté à la connaissance
                 des Utilisateurs du site OHMYFOOD.com les présentes mentions légales. 
@@ -68,6 +68,4 @@
             <a href="mailto:contact@ohmyfood.net"><p>Contactez-nous</p></a>
         </footer>
     </body>    
-
-    </body>
 </html>
